# dns-ad-blocker

./: .gitignore  CMakeLists.txt  README.md  dns-ad-blocker.service  install.sh
config/: blocklist.txt  settings.conf  whitelist.txt
docs/: architecture.md  requirements.md  sdlc-plan.md
src/: main.cpp
src/blocker/: blocklist.cpp  blocklist.hpp
src/cache/: lru_cache.cpp  lru_cache.hpp
src/config/: config.cpp  config.hpp
src/dns/: dns_packet.cpp  dns_packet.hpp  dns_server.cpp  dns_server.hpp
src/logger/: logger.cpp  logger.hpp
src/resolver/: upstream_resolver.cpp  upstream_resolver.hpp
src/thread_pool/: thread_pool.cpp  thread_pool.hpp
src/utils/: memory_stats.cpp  memory_stats.hpp
tests/: test_benchmark_utils.cpp  test_blocklist.cpp  test_dns_packet.cpp  test_integration.cpp  test_lru_cache.cpp  test_thread_pool.cpp
tools/: benchmark.cpp
